fix overflow to prevent scroll

--- a/src/App.css
+++ b/src/App.css
@@ -459,8 +459,8 @@ body {
 .game {
   max-width: 900px;
   min-width: 900px;
-  max-height: 1000px;
-  min-height: 1000px;
+  max-height: 930px;
+  min-height: 930px;
 }
 
 .score-flash-green::after,
